--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Document</title>
 </head>
 <body>
+    <h1>now iam eating</h1>
     <h2>look mama,i am using the githhub</h2>
 </body>
 </html>
