--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 <body>
     <h1>now iam eating</h1>
     <h2>look mama,i am using the githhub</h2>
+    <h1>lets go for a party</h1>
 </body>
 </html>
