--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
     <h1>now iam eating</h1>
     <h2>look mama,i am using the githhub</h2>
     <h1>lets go for a party</h1>
+    <img src="naiem khan.jpg" alt="">
 </body>
 </html>
